--- a/debian/control
+++ b/debian/control
@@ -35,8 +35,8 @@ Uploaders:
  Josh Triplett <josh@freedesktop.org>,
 Standards-Version: 4.1.1
 Homepage: https://ikiwiki.info/
-Vcs-Git: git://git.ikiwiki.info/
-Vcs-Browser: http://source.ikiwiki.branchable.com/?p=source.git;a=summary
+Vcs-Git: https://salsa.debian.org/debian/ikiwiki.git
+Vcs-Browser: https://salsa.debian.org/debian/ikiwiki
 Testsuite: autopkgtest-pkg-perl
 
 Package: ikiwiki
