Change rst plugin's interpreter from Python 2 to Python 3

--- a/debian/control
+++ b/debian/control
@@ -96,8 +96,8 @@ Suggests:
  libxml-writer-perl,
  po4a (>= 0.35-1),
  polygen,
- python,
- python-docutils,
+ python3,
+ python3-docutils,
  texlive,
  tidy,
  viewvc | gitweb | viewcvs,
