--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@ override_dh_auto_configure:
 
 override_dh_auto_install:
 	dh_auto_install
-	sed -i -e '1s,^#!.*/python$$,#!/usr/bin/python3,' \
+	sed -i -e '1s,^#!.*[ /]python$$,#!/usr/bin/python3,' \
 		debian/ikiwiki/usr/lib/ikiwiki/plugins/*
 
 override_dh_compress:
