--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ikiwiki
 Section: web
 Priority: optional
 Build-Depends:
- debhelper (>= 9),
+ debhelper (>= 11~),
  perl,
 Build-Depends-Indep:
  dpkg-dev (>= 1.9.0),
