(Build-)Depend on libmarkdown2 (>= 2.2), and opt-in to the new test that assumes that version

--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,7 @@ Build-Depends-Indep:
  libipc-run-perl,
  libimage-magick-perl | perlmagick,
  libmagickcore-6.q16-3-extra | libmagickcore-extra,
+ libmarkdown2 (>= 2.2.0),
  libnet-openid-consumer-perl,
  librpc-xml-perl,
  libtext-markdown-discount-perl,
@@ -46,6 +47,7 @@ Depends:
  libhtml-scrubber-perl,
  libhtml-template-perl,
  libjson-perl,
+ libmarkdown2 (>= 2.2.0),
  libtext-markdown-discount-perl,
  liburi-perl (>= 1.36),
  libyaml-libyaml-perl,
